--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        release {
+            keyAlias 'thekey'
+            keyPassword 'theultimatepassword'
+            storeFile file('../release_key.jks')
+            storePassword 'theultimatepassword'
+        }
+    }
     compileSdkVersion 27
     defaultConfig {
         applicationId "sk.lukasanda.wakeapp"
@@ -11,30 +19,30 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         vectorDrawables.useSupportLibrary = true
+
+        //Put your own map key to gradle.properties file
+
+        resValue 'string', "map_key", MapKey
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
-
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
-
     implementation 'com.karumi:dexter:5.0.0'
-
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.google.firebase:firebase-database:16.0.1'
-
     implementation 'com.google.firebase:firebase-core:16.0.1'
-
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.google.firebase:firebase-ads:15.0.1'
     testImplementation 'junit:junit:4.12'
